# examples

c++/custom_iterator/: custom_iterator.sln
c++/custom_iterator/custom_iterator/: custom_iterator.vcxproj  custom_iterator.vcxproj.filters
c++/custom_iterator/src/: custom_iterator.cpp  custom_iterator.h  main.cpp
c++/pstring/: pstring.sln
c++/pstring/pstring/: pstring.vcxproj  pstring.vcxproj.filters
c++/pstring/src/: main.cpp  pstring.h  pstring_a.cpp  pstring_w.cpp  test_pstring_a.cpp  test_pstring_a.h  test_pstring_w.cpp  test_pstring_w.h
c++/zlib/: zlib.sln
c++/zlib/src/: test.cpp  wincrypt_common.cpp  winwrap_wincrypt.h  zlib.cpp  zlib.h
c++/zlib/zlib/: zlib.vcxproj  zlib.vcxproj.filters
cmake/basics/0_variables/: CMakeLists.txt
cmake/basics/1_string/: CMakeLists.txt
cmake/basics/2_list/: CMakeLists.txt
cmake/basics/3_numeric_values/: CMakeLists.txt
cmake/basics/4_conditions/: CMakeLists.txt
cmake/basics/5_loops/: CMakeLists.txt
cmake/basics/6_function_and_macro/: CMakeLists.txt  include_example.cmake
cmake/templates/dll/: CMakeLists.txt  README.md
cmake/templates/dll/src/: main.cpp  module.cpp
cmake/templates/exe/: CMakeLists.txt
cmake/templates/exe/include/: dprintf.hpp  module.h
cmake/templates/exe/src/: main.cpp
cmake/templates/lib/: CMakeLists.txt  build_cmake.bat
cmake/templates/lib/include/: dprintf.hpp  libinclude.h
cmake/templates/lib/src/: libfunc1.cpp  libfunc2.cpp
crypto/AES/: AES.py
crypto/ARC4/: ARC4.py
crypto/DES3/: DES3.py
crypto/ECDSASignVerify/: ECDSASignVerify.py
crypto/RSA-AES/: RSA_AES.py  computingHash.txt
crypto/RSASignVerify/: RSASignVerify.py
hacking/HostScanByUDP/: README.md  SendUDP.py  SniffICMP.py
hacking/KeyLogger/: KeyLogger.py
hacking/PacketSniffer_Windows/: PacketSnifferWindows.py
hacking/VeryVeryVeryVeryBasic_ARPSpoofing/: ARPSpoofing.py  README.md
hacking/VeryVeryVeryVeryBasic_DNSSpoofing/: DNSSpoofing.py  DNSSpoofing_NFQueue.py
hacking/VeryVeryVeryVeryBasic_Scapy/: ScapyPractice.py
hacking/VeryVeryVeryVeryBasic_SynFlooding/: SynFlooding.py
network/: README.md  create_keypairs.sh  create_keypairs_passwd.sh  ssl_client.py  ssl_server.py
network/python_ssl_mutual_verification/: README.md  ssl_client.py  ssl_server.py
network/simple_socket_echo/linux_c/: echoClient.c  echoServer.c
network/simple_socket_echo/windows_cpp/: CMakeLists.txt  cmake_build.bat  useful_command_lines.txt
network/simple_socket_echo/windows_cpp/include/: tcp_common.h
network/simple_socket_echo/windows_cpp/src/: client.cpp  server.cpp  tcp_common.cpp
network/simple_socket_echo/windows_cpp/win_simple_socket_echo_client/win_simple_socket_echo_client/: client.cpp  win_simple_socket_echo_client.cbp  win_simple_socket_echo_client.layout
network/simple_socket_echo/windows_cpp/win_simple_socket_echo_server/: win_simple_socket_echo_server.cbp  win_simple_socket_echo_server.layout
network/tcp_file_transfer/: client.py  server.py
utility/convert_image/: avifzip_to_webpzip.py  colorpng_to_grayscalepng.py  convert_image.py  convert_image_dir.py  lt.py  png_to_webp.py
utility/create_random_file/: createRandomFile.py
utility/extract_first_file/: extract_first_image.py
utility/filesystem_query/python/: filesystem_query.py
utility/load_library/cpp/: CMakeLists.txt
utility/load_library/cpp/src/: main.cpp
utility/screen_capture/: ScreenCapture.py
utility/serializable_string_dict/: SSD.cpp  SSD.h  main.cpp  serializable_string_dict.sln
utility/serializable_string_dict/serializable_string_dict/: serializable_string_dict.vcxproj  serializable_string_dict.vcxproj.filters
utility/serializable_string_dict/src/: main.cpp  serializable_string_dict.cpp  serializable_string_dict.h
utility/windows_version/: .gitignore  CMakeLists.txt
utility/windows_version/include/: module.h
utility/windows_version/src/: main.cpp  module.cpp
windows/ctypes/: list_directory.py
windows/ctypes/ctypes_util/: constant.py  kernel32.py
windows/winwrap/: CMakeLists.txt  cmake_build.bat  winwrap.sln  winwrap.vcxproj  winwrap.vcxproj.filters
windows/winwrap/compression/: compression.vcxproj  compression.vcxproj.filters
windows/winwrap/encoding/: encoding.vcxproj  encoding.vcxproj.filters
windows/winwrap/filesystem/: filesystem.vcxproj  filesystem.vcxproj.filters
windows/winwrap/src/compression/: winwrap_compression.cpp
windows/winwrap/src/encoding/: winwrap_encoding.cpp
windows/winwrap/src/filesystem/: winfile.cpp  winfilesystemwalk.cpp  winifileoperation.cpp  winpath.cpp  winwrap_filesystem.cpp
windows/winwrap/src/include/: dprintf.hpp  winwrap_aes.h  winwrap_compression.h  winwrap_encoding.h  winwrap_filesystem.h  winwrap_registry.h  winwrap_tcp.h  winwrap_wincrypt.h
windows/winwrap/src/registry/: winwrap_registry_a.cpp
windows/winwrap/src/tcp/: sock.cpp  winacceptsock.cpp  winsock.cpp  wintcp.cpp  winwrap_tcp.cpp
windows/winwrap/src/test/: main.cpp  test_compression.cpp  test_echoclient.cpp  test_echoserver.cpp  test_filesystem.cpp  test_main.cpp  test_registry.cpp  test_wincrypt.cpp
windows/winwrap/src/wincrypt/: wincrypt_aes256.cpp  wincrypt_common.cpp  wincrypt_sha256.cpp  wincryptaes.cpp
windows/winwrap/tcp/: tcp.vcxproj  tcp.vcxproj.filters
windows/winwrap/wincrypt/: wincrypt.vcxproj  wincrypt.vcxproj.filters
windows/winwrap/winwrap_registry/: winwrap_registry.vcxproj  winwrap_registry.vcxproj.filters  winwrap_registry_w.cpp
